src/snapshots/treetop__treetop_app__test__help_popup_in_normal_mode.snap
---
source: src/treetop_app.rs
expression: render_ui(&mut app)
---
┌ Help ────────────────────────────────────────────────────────────────────────┐
│hello world                                                                   │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
